finally upgrade to jdk 21