@@ -12,7 +12,8 @@ repositories {
 }
 
 java {
-    sourceCompatibility(JavaVersion.VERSION_18)
+    sourceCompatibility(JavaVersion.VERSION_21)
+    targetCompatibility(JavaVersion.VERSION_21)
 }
 
 dependencies {
@@ -22,14 +23,6 @@ dependencies {
     testImplementation gradleTestKit()
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-}
-
-compileJava {
-    options.compilerArgs.add('--enable-preview')
-}
-
-compileTestJava {
-    options.compilerArgs.add('--enable-preview')
 }
 
 test {
